--- a/server/Gemfile
+++ b/server/Gemfile
@@ -32,6 +32,11 @@ gem 'bcrypt', '~> 3.1.7'
 
 gem 'knock', '~> 2.1.1'
 gem 'koala', '~> 3.0.0'
+gem 'dotenv-rails', groups: [:development, :test]
+gem 'validates_email_format_of', '~> 1.6.3'
+gem 'carrierwave', '~> 1.0'
+gem 'fog-aws', '~> 1.4.1'
+
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
