--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
+    "react-native-linear-gradient": "^2.3.0",
+    "react-native-modal": "^3.1.0",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11",
