--- a/server/config/secrets.yml
+++ b/server/config/secrets.yml
@@ -36,3 +36,9 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  aws_scret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
+  aws_region: <%= ENV["AWS_REGION"] %>
+  aws_bucket: <%= ENV["AWS_BUCKET"] %>
+  facebook_app_id: <%= ENV["FACEBOOK_API_ID"] %>
+  facebook_app_secret: <%= ENV["FACEBOOK_APP_SECRET"] %>
