--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "clarifai": "^2.4.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
@@ -23,6 +24,7 @@
     "react-native-linear-gradient": "^2.3.0",
     "react-native-modal": "^3.1.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-spinkit": "latest",
     "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
