--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,13 @@
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
     "react-native-fbsdk": "0.6.0",
+    "react-native-fit-image": "^1.5.2",
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-modal": "^3.1.0",
-    "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-scrollable-tab-view": "^0.7.4",
     "react-native-spinkit": "latest",
     "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11",
@@ -33,8 +34,15 @@
     "redux-loop": "^3.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.0",
     "babel-jest": "21.0.2",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-react-native": "^2.3.2",
     "jest": "21.1.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
