--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "clarifai": "^2.4.0",
+    "immutable": "^3.8.1",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
@@ -21,9 +23,11 @@
     "react-native-fit-image": "^1.5.2",
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
+    "react-native-image-progress": "^1.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-modal": "^3.1.0",
+    "react-native-progress": "^3.4.0",
     "react-native-scrollable-tab-view": "^0.7.4",
     "react-native-spinkit": "latest",
     "react-native-vector-icons": "^4.4.0",
