Map and camera created.

--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
+    "react-native-camera": "^0.10.0",
     "react-native-fbsdk": "0.6.0",
     "react-native-fit-image": "^1.5.2",
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-linear-gradient": "^2.3.0",
+    "react-native-maps": "^0.16.4",
     "react-native-modal": "^3.1.0",
     "react-native-progress": "^3.4.0",
     "react-native-scrollable-tab-view": "^0.7.4",
