--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -133,6 +133,8 @@ android {
 }
 
 dependencies {
+    compile project(':gl-react-native')
+    compile project(':react-native-image-resizer')
     compile project(':react-native-camera')
     compile project(':react-native-maps')
     compile project(':react-native-spinkit')
