--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "clarifai": "^2.4.0",
+    "gl-react": "^2.3.0",
+    "gl-react-native": "^2.47.0",
     "immutable": "^3.8.1",
     "moment": "^2.18.1",
     "pluralize": "^7.0.0",
@@ -25,6 +27,7 @@
     "react-native-fit-image": "^1.5.2",
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
+    "react-native-image-resizer": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-maps": "^0.16.4",
