--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.16.2",
     "clarifai": "^2.4.0",
     "gl-react": "^2.3.0",
+    "gl-react-image": "^3.1.0",
     "gl-react-native": "^2.47.0",
     "immutable": "^3.8.1",
     "moment": "^2.18.1",
