Upload view done.

--- a/client/package.json
+++ b/client/package.json
@@ -16,20 +16,26 @@
     "clarifai": "^2.4.0",
     "gl-react": "^2.3.0",
     "gl-react-image": "^3.1.0",
+    "gl-react-imagefilters": "^0.1.5",
     "gl-react-native": "^2.47.0",
     "immutable": "^3.8.1",
     "moment": "^2.18.1",
+    "native-base": "^2.3.2",
     "pluralize": "^7.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
     "react-native-camera": "^0.10.0",
     "react-native-fbsdk": "0.6.0",
     "react-native-fit-image": "^1.5.2",
+    "react-native-fs": "^2.5.2",
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
     "react-native-image-resizer": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
+    "react-native-lightbox": "^0.7.0",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-maps": "^0.16.4",
     "react-native-modal": "^3.1.0",
