--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Pawly'
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
 include ':gl-react-native'
 project(':gl-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/gl-react-native/android')
 include ':react-native-image-resizer'
