--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-blur')
     compile project(':react-native-google-places')
     compile project(':react-native-fs')
     compile project(':gl-react-native')
