--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-addons-shallow-compare": "^15.6.2",
     "react-native": "0.48.3",
     "react-native-animatable": "^1.2.4",
+    "react-native-blur": "^3.2.0",
     "react-native-camera": "^0.10.0",
     "react-native-fbsdk": "0.6.0",
     "react-native-fit-image": "^1.5.2",
@@ -35,6 +36,7 @@
     "react-native-image-crop-picker": "^0.16.1",
     "react-native-image-picker": "latest",
     "react-native-image-resizer": "^1.0.0",
+    "react-native-image-zoom-viewer": "^2.0.10",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-lightbox": "^0.7.0",
     "react-native-linear-gradient": "^2.3.0",
