--- a/server/Gemfile
+++ b/server/Gemfile
@@ -38,7 +38,7 @@ gem 'carrierwave', '~> 1.0'
 gem 'fog-aws', '~> 1.4.1'
 gem 'kaminari', '~> 1.0.1'
 gem 'geocoder', '~> 1.4.4'
-
+gem 'closure_tree', '~> 6.6.0'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
