--- a/server/Gemfile
+++ b/server/Gemfile
@@ -39,6 +39,11 @@ gem 'fog-aws', '~> 1.4.1'
 gem 'kaminari', '~> 1.0.1'
 gem 'geocoder', '~> 1.4.4'
 gem 'geokit-rails', '~> 2.3.0'
+gem "rack-attack"
+gem 'redis-activesupport'
+gem 'rack-test', require: 'rack/test'
+gem 'rack-cors', require: 'rack/cors'
+gem 'mailgun-ruby', '~>1.1.6'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
@@ -49,6 +54,7 @@ group :development, :test do
   # Adds support for Capybara system testing and selenium driver
   gem 'capybara', '~> 2.13'
   gem 'selenium-webdriver'
+  gem 'rspec-rails', '~> 3.6'
 end
 
 group :development do
